--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -13,7 +13,7 @@ ul {
 p {
     font-family: 'Space Mono', monospace;
 }
-li {
+ul li {
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -40,6 +40,9 @@ li {
         border: 10px solid $quaternaryColour;
         @media (max-width: 690px) {
             padding: 10px;
+        }
+        .swal2-image {
+            margin: 0 auto;
         }
     }
     .swal2-content {
