--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -11,16 +11,16 @@ header {
             font-family: "Wallpoet", cursive;
             margin: 0;
             flex: 2 auto;
-            @media (max-width: 605px) {
+            @media (max-width: 675px) {
                 font-size: 1.8rem;
             }
             @media (max-width: 520px) {
                 font-size: 1.5rem;
             }
-            @media (max-width: 370px) {
+            @media (max-width: 420px) {
                 font-size: 1.3rem;
             }
-            @media (max-width: 330px) {
+            @media (max-width: 370px) {
                 font-size: 1.1rem;
             }
         }
@@ -38,9 +38,10 @@ header {
             font-size: 1.6rem;
             padding: 0 5px;
             border: none;
-            flex: 0 1 auto;
             background: none;
             transition: color 0.5s ease-out;
+            position: absolute;
+            right: 5%;
             z-index: 20;
             animation: pulse;
             animation-duration: 2s;
@@ -49,15 +50,22 @@ header {
             @media (prefers-reduced-motion: reduce) {
                 animation: none;
             }
-            @media (max-width: 330px) {
-                font-size: 1.2rem;
-            }
             &:hover,
             &:focus {
                 color: $secondaryColour;
                 @media (max-width: 500px) {
                     color: $primaryColour;
                 }
+            }
+        }
+        .fa-bars {
+            @media (max-width: 520px) {
+                font-size: 1.2rem;
+                right: 3%;
+            }
+            @media (max-width: 350px) {
+                font-size: 1rem;
+                right: 0;
             }
         }
         .fa-times {
@@ -71,12 +79,6 @@ header {
                     color: $accentColour;
                 }
             }
-            @media (max-width: 1280px) {
-                margin-right: 15px;
-            }
-            @media (max-width: 525px) {
-                margin-right: 0;
-            }
         }
     }
     .instructionsMenu {
@@ -86,7 +88,7 @@ header {
         h2 {
             text-align: center;
             font-size: 2.1rem;
-            @media (max-width: 605px) {
+            @media (max-width: 675px) {
                 font-size: 1.8rem;
             }
             @media (max-width: 420px) {
