--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -11,10 +11,7 @@ main {
         margin: 0 15%;
         grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
         grid-template-rows: auto;
-        @media (max-width: 990px) {
-            min-height: 270px;
-        }
-        @media (max-width: 742px) {
+        @media (max-width: 1115px) {
             min-height: 400px;
         }
         @media (max-width: 592px) {
@@ -25,11 +22,25 @@ main {
         @media (max-width: 486px) {
             min-height: 360px;
         }
+        @media (max-width: 358px) {
+            margin: 10px 0;
+        }
         .startScreenDice {
             width: 125px;
             height: 125px;
             animation: bounceInDown;
             animation-duration: 5s;
+            @media (prefers-reduced-motion: reduce) {
+                animation: none;
+            }
+            @media (max-width: 1115px) {
+                width: 100px;
+                height: 100px;
+            }
+            @media (max-width: 592px) {
+                width: 75px;
+                height: 75px;
+            }
         }
         .startScreenDice:nth-of-type(2) {
             animation-delay: 0.2s;
@@ -55,6 +66,9 @@ main {
         position: relative;
         animation: bounceInDown;
         animation-duration: 0.3s;
+        @media (prefers-reduced-motion: reduce) {
+            animation: none;
+        }
         @media (max-width: 990px) {
             width: 100px;
             height: 100px;
@@ -71,10 +85,16 @@ main {
         transform: translateZ(-60px); 
         transform-style: preserve-3d;
         transition: transform 1s;
+        @media (max-width: 1115px) {
+            transform: translateZ(-49px);
+        }
+        @media (max-width: 592px) {
+            transform: translateZ(-35px);
+        }
     }
     .diceFace {
-        width: 120px;
-        height: 120px;
+        width: 100%;
+        height: 100%;
         position: absolute;
     }
     .dot1,
@@ -238,38 +258,136 @@ main {
     .startDiceFace6 {
         border: 1px solid $primaryColour;
         background: $secondaryColour;
+        .dot1,
+        .dot2,
+        .dot3,
+        .dot4,
+        .dot5,
+        .dot6 {
+            @media (max-width: 1115px) {
+                width: 20px;
+                height: 20px;
+            }
+            @media (max-width: 592px) {
+                width: 15px;
+                height: 15px;
+            }
+        }
     }
     .startDiceFace1 {
         @extend .diceFace1;
-        transform: rotateY(  0deg) translateZ(60px);
+        transform: rotateY(0deg) translateZ(60px);
+        @media (max-width: 1115px) {
+            transform: rotateY(0deg) translateZ(49px);
+        }
+        @media (max-width: 592px) {
+            transform: rotateY(0deg) translateZ(35px);
+        }
     }
     .startDiceFace2 {
         @extend .diceFace2;
-        transform: rotateY( 90deg) translateZ(60px);
+        transform: rotateY(90deg) translateZ(60px);
+        @media (max-width: 1115px) {
+            transform: rotateY(90deg) translateZ(49px);
+        }
+        @media (max-width: 592px) {
+            transform: rotateY(90deg) translateZ(35px);
+        }
     }
     .startDiceFace3 {
         @extend .diceFace3;
-        transform: rotateX( 90deg) translateZ(60px);
+        transform: rotateX(90deg) translateZ(60px);
+        @media (max-width: 1115px) {
+            transform: rotateX(90deg) translateZ(49px);
+        }
+        @media (max-width: 592px) {
+            transform: rotateX(90deg) translateZ(35px);
+        }
     }
     .startDiceFace4 {
         @extend .diceFace4;
         transform: rotateX(-90deg) translateZ(60px);
+        @media (max-width: 1115px) {
+            transform: rotateX(-90deg) translateZ(49px);
+        }
+        @media (max-width: 592px) {
+            transform: rotateX(-90deg) translateZ(35px);
+        }
     }
     .startDiceFace5 {
         @extend .diceFace5;
-        transform: rotateY(-90deg) translateZ(60px); 
+        transform: rotateY(-90deg) translateZ(60px);
+        @media (max-width: 1115px) {
+            transform: rotateY(-90deg) translateZ(49px);
+        }
+        @media (max-width: 592px) {
+            transform: rotateY(-90deg) translateZ(35px);
+        } 
     }
     .startDiceFace6 {
         @extend .diceFace6;
         transform: rotateY(180deg) translateZ(60px);
+        @media (max-width: 1115px) {
+            transform: rotateY(180deg) translateZ(49px);
+        }
+        @media (max-width: 592px) {
+            transform: rotateY(180deg) translateZ(35px);
+        }
     }
-
-    .startDice.showDiceFace1  { transform: translateZ(-60px) rotateY(   0deg); }
-    .startDice.showDiceFace2  { transform: translateZ(-60px) rotateY( -90deg); }
-    .startDice.showDiceFace3  { transform: translateZ(-60px) rotateX( -90deg); }
-    .startDice.showDiceFace4  { transform: translateZ(-60px) rotateX(  90deg); }
-    .startDice.showDiceFace5  { transform: translateZ(-60px) rotateY(  90deg); }
-    .startDice.showDiceFace6  { transform: translateZ(-60px) rotateY(-180deg); }
+    .showStartDiceFace1  { 
+        transform: translateZ(-60px) rotateY(0deg);
+        @media (max-width: 1115px) {
+            transform: translateZ(-49px) rotateY(0deg);
+        }
+        @media (max-width: 592px) {
+            transform: translateZ(-35px) rotateY(0deg);
+        } 
+    }
+    .showStartDiceFace2  { 
+        transform: translateZ(-60px) rotateY(-90deg);
+        @media (max-width: 1115px) {
+            transform: translateZ(-49px) rotateY(-90deg);
+        }
+        @media (max-width: 592px) {
+            transform: translateZ(-35px) rotateY(-90deg);
+        }
+    }
+    .showStartDiceFace3  { 
+        transform: translateZ(-60px) rotateX(-90deg);
+        @media (max-width: 1115px) {
+            transform: translateZ(-49px) rotateX(90deg);
+        }
+        @media (max-width: 592px) {
+            transform: translateZ(-35px) rotateX(90deg);
+        } 
+    }
+    .showStartDiceFace4  { 
+        transform: translateZ(-60px) rotateX(90deg); 
+        @media (max-width: 1115px) {
+            transform: translateZ(-49px) rotateX(90deg);
+        }
+        @media (max-width: 592px) {
+            transform: translateZ(-35px) rotateX(90deg);
+        }
+    }
+    .showStartDiceFace5  { 
+        transform: translateZ(-60px) rotateY(90deg);
+        @media (max-width: 1115px) {
+            transform: translateZ(-49px) rotateY(90deg);
+        }
+        @media (max-width: 592px) {
+            transform: translateZ(-35px) rotateY(90deg);
+        } 
+    }
+    .showStartDiceFace6  { 
+        transform: translateZ(-60px) rotateY(-180deg);
+        @media (max-width: 1115px) {
+            transform: translateZ(-49px) rotateY(-180deg);
+        }
+        @media (max-width: 592px) {
+            transform: translateZ(-35px) rotateY(-180deg);
+        } 
+    }
     
     .playButtons {
         display: grid;
@@ -315,10 +433,13 @@ main {
             display: none;
         }
         .start {
-            grid-column: 5 / span 3;
+            grid-column: 5 / span 4;
             animation: pulse;
             animation-duration: 2s;
             animation-iteration-count: infinite;
+            @media (prefers-reduced-motion: reduce) {
+                animation: none;
+            }
             @media (max-width: 605px) {
                 grid-column: 4 / span 6;
             }
