--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -11,16 +11,13 @@ main {
         margin: 0 15%;
         grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
         grid-template-rows: auto;
-        @media (max-width: 1115px) {
-            min-height: 400px;
-        }
         @media (max-width: 592px) {
             grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
             grid-gap: 2%;
             min-height: 280px;
         }
         @media (max-width: 486px) {
-            min-height: 360px;
+            min-height: 300px;
         }
         @media (max-width: 358px) {
             margin: 10px 0;
@@ -376,6 +373,7 @@ main {
     
     .playButtons {
         display: grid;
+        margin-bottom: 10px;
         grid-template-columns: repeat(12, 1fr);
         grid-auto-rows: 70px;
         grid-gap: 1%;
@@ -386,7 +384,8 @@ main {
         }
         .start, 
         .rollNewDice,
-        .stand {
+        .stand,
+        .bet {
             text-transform: uppercase;
             letter-spacing: 2px;
             background: $quinaryColour;
@@ -414,7 +413,8 @@ main {
             }
         }
         .rollNewDice,
-        .stand {
+        .stand,
+        .bet {
             display: none;
         }
         .start {
@@ -451,9 +451,21 @@ main {
             }
         }
         .stand {
+            grid-column: 5 / span 4;
+            @media (max-width: 840px) {
+                grid-column: 4 / span 6;
+            }
+            @media (max-width: 470px) {
+                grid-column: 4 / span 6;
+            }
+        }
+        .bet {
             grid-column: 7 / span 3;
             @media (max-width: 1135px) {
                 grid-column: 7 / span 4;
+            }
+            @media (max-width: 840px) {
+                grid-column: 7 / span 5;
             }
             @media (max-width: 680px) {
                 grid-column: 8 / span 4;
@@ -470,22 +482,23 @@ main {
         }
     }
     .userScoreIndicator {
-        min-height: 80px;
-        @media (max-width: 580px) {
-            min-height: 60px;
-        }
-        @media (max-width: 470px) {
-            min-height: 50px;
-        }
         p {
-            margin-top: 0;
+            margin: 0 0 5px;
             text-align: center;
             font-family: 'Space Mono', monospace;
             font-size: 1.2rem;
+            text-transform: uppercase;
             @media (max-width: 605px) {
                 font-size: 0.9rem;
             }
         }
+    }
+    .userMoneyIndicator {
+        display: none;
+        @extend .userScoreIndicator;
+    }
+    .showUserMoneyIndicator {
+        display: block;
     }
 }
 // Main content styles ends here
