--- a/styles/style.css
+++ b/styles/style.css
@@ -187,6 +187,15 @@ ul li {
         padding: 10px; } }
     .swal2-container .swal2-popup .swal2-image {
       margin: 0 auto; }
+  .swal2-container .swal2-content .swal2-input {
+    color: #FFFFFF;
+    background: #171A21;
+    border: 1px solid #070707; }
+  .swal2-container .swal2-content .swal2-input {
+    margin: 10px auto; }
+  .swal2-container .swal2-content .swal2-validation-message {
+    background: #447020;
+    color: #FFFFFF; }
   .swal2-container .swal2-content p {
     text-align: left;
     margin: 5px 0;
@@ -197,6 +206,8 @@ ul li {
     @media (max-width: 470px) {
       .swal2-container .swal2-content p {
         font-size: 0.8rem; } }
+  .swal2-container .swal2-content .newGame {
+    text-align: center; }
   .swal2-container .swal2-actions {
     margin-top: 5px; }
     .swal2-container .swal2-actions button {
@@ -330,13 +341,17 @@ header .instructionsMenu {
     text-align: left;
     font-size: 1.1rem;
     margin-top: 0; }
+    @media (max-width: 1000px) {
+      header .instructionsMenu .steps p {
+        font-size: 1rem;
+        margin-bottom: 10px; } }
     @media (max-width: 690px) {
       header .instructionsMenu .steps p {
         font-size: 0.9rem; } }
-    @media (max-width: 420px) {
+    @media (max-width: 520px) {
       header .instructionsMenu .steps p {
         font-size: 0.8rem; } }
-    @media (max-width: 330px) {
+    @media (max-width: 420px) {
       header .instructionsMenu .steps p {
         font-size: 0.7rem; } }
     header .instructionsMenu .steps p:first-letter {
@@ -371,9 +386,6 @@ main .diceGrid {
   grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
   -ms-grid-rows: auto;
   grid-template-rows: auto; }
-  @media (max-width: 1115px) {
-    main .diceGrid {
-      min-height: 400px; } }
   @media (max-width: 592px) {
     main .diceGrid {
       grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
@@ -381,7 +393,7 @@ main .diceGrid {
       min-height: 280px; } }
   @media (max-width: 486px) {
     main .diceGrid {
-      min-height: 360px; } }
+      min-height: 300px; } }
   @media (max-width: 358px) {
     main .diceGrid {
       margin: 10px 0; } }
@@ -903,6 +915,7 @@ main .showStartDiceFace6 {
 main .playButtons {
   display: -ms-grid;
   display: grid;
+  margin-bottom: 10px;
   -ms-grid-columns: (1fr)[12];
   grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: 70px;
@@ -914,7 +927,8 @@ main .playButtons {
       padding-bottom: 10px; } }
   main .playButtons .start,
   main .playButtons .rollNewDice,
-  main .playButtons .stand {
+  main .playButtons .stand,
+  main .playButtons .bet {
     text-transform: uppercase;
     letter-spacing: 2px;
     background: #171A21;
@@ -930,18 +944,22 @@ main .playButtons {
     @media (max-width: 605px) {
       main .playButtons .start,
       main .playButtons .rollNewDice,
-      main .playButtons .stand {
+      main .playButtons .stand,
+      main .playButtons .bet {
         font-size: 1rem; } }
     @media (max-width: 470px) {
       main .playButtons .start,
       main .playButtons .rollNewDice,
-      main .playButtons .stand {
+      main .playButtons .stand,
+      main .playButtons .bet {
         font-size: 0.9rem; } }
     main .playButtons .start:hover, main .playButtons .start:focus,
     main .playButtons .rollNewDice:hover,
     main .playButtons .rollNewDice:focus,
     main .playButtons .stand:hover,
-    main .playButtons .stand:focus {
+    main .playButtons .stand:focus,
+    main .playButtons .bet:hover,
+    main .playButtons .bet:focus {
       -webkit-box-shadow: 0 5px 5px #070707;
       box-shadow: 0 5px 5px #070707;
       text-shadow: 2px 2px 1px #070707;
@@ -951,13 +969,16 @@ main .playButtons {
         main .playButtons .rollNewDice:hover,
         main .playButtons .rollNewDice:focus,
         main .playButtons .stand:hover,
-        main .playButtons .stand:focus {
+        main .playButtons .stand:focus,
+        main .playButtons .bet:hover,
+        main .playButtons .bet:focus {
           color: #FFFFFF;
           -webkit-box-shadow: none;
           box-shadow: none;
           text-shadow: none; } }
   main .playButtons .rollNewDice,
-  main .playButtons .stand {
+  main .playButtons .stand,
+  main .playButtons .bet {
     display: none; }
   main .playButtons .start {
     -ms-grid-column: 5;
@@ -1008,21 +1029,40 @@ main .playButtons {
         main .playButtons .rollNewDice:hover {
           cursor: pointer; } }
   main .playButtons .stand {
+    -ms-grid-column: 5;
+    -ms-grid-column-span: 4;
+    grid-column: 5 / span 4; }
+    @media (max-width: 840px) {
+      main .playButtons .stand {
+        -ms-grid-column: 4;
+        -ms-grid-column-span: 6;
+        grid-column: 4 / span 6; } }
+    @media (max-width: 470px) {
+      main .playButtons .stand {
+        -ms-grid-column: 4;
+        -ms-grid-column-span: 6;
+        grid-column: 4 / span 6; } }
+  main .playButtons .bet {
     -ms-grid-column: 7;
     -ms-grid-column-span: 3;
     grid-column: 7 / span 3; }
     @media (max-width: 1135px) {
-      main .playButtons .stand {
+      main .playButtons .bet {
         -ms-grid-column: 7;
         -ms-grid-column-span: 4;
         grid-column: 7 / span 4; } }
+    @media (max-width: 840px) {
+      main .playButtons .bet {
+        -ms-grid-column: 7;
+        -ms-grid-column-span: 5;
+        grid-column: 7 / span 5; } }
     @media (max-width: 680px) {
-      main .playButtons .stand {
+      main .playButtons .bet {
         -ms-grid-column: 8;
         -ms-grid-column-span: 4;
         grid-column: 8 / span 4; } }
     @media (max-width: 470px) {
-      main .playButtons .stand {
+      main .playButtons .bet {
         -ms-grid-column: 4;
         -ms-grid-column-span: 6;
         grid-column: 4 / span 6; } }
@@ -1031,22 +1071,21 @@ main .playButtons {
   main .playButtons .hideStartButton {
     display: none; }
 
-main .userScoreIndicator {
-  min-height: 80px; }
-  @media (max-width: 580px) {
-    main .userScoreIndicator {
-      min-height: 60px; } }
-  @media (max-width: 470px) {
-    main .userScoreIndicator {
-      min-height: 50px; } }
-  main .userScoreIndicator p {
-    margin-top: 0;
-    text-align: center;
-    font-family: 'Space Mono', monospace;
-    font-size: 1.2rem; }
-    @media (max-width: 605px) {
-      main .userScoreIndicator p {
-        font-size: 0.9rem; } }
+main .userScoreIndicator p, main .userMoneyIndicator p {
+  margin: 0 0 5px;
+  text-align: center;
+  font-family: 'Space Mono', monospace;
+  font-size: 1.2rem;
+  text-transform: uppercase; }
+  @media (max-width: 605px) {
+    main .userScoreIndicator p, main .userMoneyIndicator p {
+      font-size: 0.9rem; } }
+
+main .userMoneyIndicator {
+  display: none; }
+
+main .showUserMoneyIndicator {
+  display: block; }
 
 footer {
   border-top: 2px solid #070707;
