--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -6,11 +6,16 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
+    @media (max-width: 1000px) {
+        margin: 148px 0 0;
+        padding: 0;
+        position: initial;
+    }
     p {
         text-transform: capitalize;
+        margin: 0;
         font-size: 0.8rem;
         text-align: center;
-        margin: 5px 0;
         color: $accentColour;
         @media (max-width: 520px) {
             font-size: 0.7rem;
