--- a/styles/style.css
+++ b/styles/style.css
@@ -1094,11 +1094,16 @@ footer {
   bottom: 0;
   left: 0;
   right: 0; }
+  @media (max-width: 1000px) {
+    footer {
+      margin: 148px 0 0;
+      padding: 0;
+      position: initial; } }
   footer p {
     text-transform: capitalize;
+    margin: 0;
     font-size: 0.8rem;
     text-align: center;
-    margin: 5px 0;
     color: #FFFFFF; }
     @media (max-width: 520px) {
       footer p {
