--- a/styles/style.css
+++ b/styles/style.css
@@ -252,10 +252,10 @@ header .wrapper {
     @media (max-width: 520px) {
       header .wrapper h1 {
         font-size: 1.5rem; } }
-    @media (max-width: 420px) {
+    @media (max-width: 450px) {
       header .wrapper h1 {
         font-size: 1.3rem; } }
-    @media (max-width: 370px) {
+    @media (max-width: 390px) {
       header .wrapper h1 {
         font-size: 1.1rem; } }
   header .wrapper .fa-dice {
@@ -294,6 +294,9 @@ header .wrapper {
       header .wrapper .instructionsMenuIcon {
         -webkit-animation: none;
         animation: none; } }
+    @media (max-width: 340px) {
+      header .wrapper .instructionsMenuIcon {
+        position: initial; } }
     header .wrapper .instructionsMenuIcon:hover, header .wrapper .instructionsMenuIcon:focus {
       color: #690500; }
       @media (max-width: 500px) {
