--- a/styles/partials/_colours.scss
+++ b/styles/partials/_colours.scss
@@ -1,7 +1,7 @@
 // Colour variables generated here
 $primaryColour: #070707;
 $secondaryColour: #690500;
-$tertiaryColour: rgb(68, 112, 32);
-$quaternaryColour: #49270c;
+$tertiaryColour: #65A72F;
+$quaternaryColour: #49270C;
 $quinaryColour: #171A21;
 $accentColour: #FFFFFF;
